Alignment Fixtures

--- a/style.css
+++ b/style.css
@@ -272,49 +272,53 @@ input:checked + label:after {
 
 /* -- Hero Section-- */
 
-
 .hero-section{
   background: #800080;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ffc0cb, #da8dda);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ffc0cb, #d88fd8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: 1px solid black;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-container {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
-  border: 1px solid black;
-  height: 100vh;
-  width: 100%;
-
-
+  text-align: center;
 }
-.hero-section h1{
+
+.hero-container h1{
   font-size: 10vh;
-  justify-content: space-between;
   margin-bottom: 5vh;
+
 }
 
-.hero-section p{
-  justify-content:space-between;
-
-  width: 80vh;
-
-
+.hero-container p{
+  width: 50vw;
   font-size: 4vh;
+  line-height: 1em;
 }
-.hero-section button{
+.hero-container button{
   padding: 1vh;
   font-size: large;
   border: none;
   background-color: gold;
-
+  border-radius: 20px;
 }
-.hero-section button:hover{
+.hero-container button:hover{
   background-color:white;
   border-color: gold;
   transition-duration: 1s;
   animation-direction: alternate;
 }
+
+
 
 /* --Section header -- */
 #header {
